<resources>
    <string name="app_name">Homework</string>
    <string name="catalog">Catalog</string>
    <string name="info">Info</string>
    <string name="phone">Phone:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="back">Back</string>
    <string name="set_info">Set Info</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="name">name</string>
    <string name="enter_your_surname">Enter your surname:</string>
    <string name="surname">surname</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="email">email</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="book_catalog">Book catalog</string>
    <string name="name_of_the_book">Name of the book:</string>
    <string name="author">Author:</string>
    <string name="pages">Pages:</string>
    <string name="films_catalog">Films Catalog</string>
    <string name="film_title">Film title:</string>
    <string name="title">title</string>
    <string name="director">Director:</string>
    <string name="duration">Duration:</string>
    <string name="add_event">Add event</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="description">Description:</string>
    <string name="confirm_event">Confirm event:</string>
    <string name="confirm">Confirm</string>
    <string name="mynotes">MyNotes</string>
    <string name="my_notes">MY Notes</string>
    <string name="my_notes1">My notes</string>
    <string name="ok">OK</string>
    <string name="enter_your_note">Enter your note</string>
</resources>