<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw18.catalog.InfoActivity">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/info"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:padding="8dp"
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/phone"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:padding="8dp"
        android:id="@+id/tvModelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/model"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:padding="8dp"
        android:id="@+id/tvYearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/year"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModel" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="8dp"
        android:text="@string/_1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/corner_background"
        app:layout_constraintStart_toStartOf="@id/tvNameTitle"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle" />

    <TextView
        android:padding="8dp"
        android:id="@+id/tvModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:layout_marginStart="32dp"
        android:background="@drawable/corner_background"
        android:layout_marginEnd="32dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvModelTitle" />

    <TextView
        android:textStyle="bold"
        android:padding="8dp"
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="24sp"
        android:background="@drawable/corner_background"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYearTitle"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barProfileInfoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"/>
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:text="@string/back"
        android:textAllCaps="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>